--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "cw-components",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "styleguidist server",
+    "build": "styleguidist build",
+    "deploy": "yarn run build && gh-pages -d styleguide",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "**/*.scss": "stylelint --syntax=scss --fix",
+    "**/*.js": [
+      "prettier --single-quote --write",
+      "eslint --quiet --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
-    "@bit/aabdaab.cw-components.global.card": "1.0.22",
-    "@bit/aabdaab.cw-components.global.check-input": "^0.0.2",
     "gh-pages": "^1.2.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-css-themr": "^2.1.2",
     "react-dom": "^16.4.1",
     "react-styleguidist": "^7.1.0"
   },
@@ -21,25 +33,24 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^5.1.0",
-    "eslint-config-vizzuality": "1.0.14",
-    "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-config-vizzuality": "^1.1.3",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.9.1",
     "file-loader": "^1.1.11",
+    "lint-staged": "^7.2.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "prettier": "^1.13.7",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-standard": "^18.2.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1"
-  },
-  "scripts": {
-    "start": "styleguidist server",
-    "build": "styleguidist build",
-    "deploy": "yarn run build && gh-pages -d styleguide"
   }
 }
