--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "cw-components",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/bundle.js",
   "scripts": {
     "start": "styleguidist server",
     "build": "styleguidist build",
+    "compile": "webpack",
     "deploy": "yarn run build && gh-pages -d styleguide",
     "precommit": "lint-staged"
   },
@@ -28,29 +30,27 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.1",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "17.0.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-config-vizzuality": "^1.1.3",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.9.1",
+    "compression-webpack-plugin": "^1.1.11",
+    "eslint": "^5.1.0",
+    "eslint-config-vizzuality": "1.0.14",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "lint-staged": "^7.2.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
-    "prettier": "^1.13.7",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.4.0",
-    "stylelint-config-standard": "^18.2.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.1"
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0"
   }
 }
