--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,9 @@ parserOptions:
     experimentalObjectRestSpread: true
   sourceType: module
 plugins: [react, prettier]
+rules: 
+  jsx-a11y/click-events-have-key-events: 'warn'
+  jsx-a11y/no-noninteractive-element-interactions: 'warn'
 
 settings:
   import/resolver:
