--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@bit/aabdaab.cw-components.global.card": "latest",
     "@bit/aabdaab.cw-components.global.check-input": "latest",
     "classnames": "^2.2.6",
+    "compression-webpack-plugin": "^1.1.11",
     "eslint-plugin-prettier": "2.6.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "1.2.0",
+    "glob": "^7.1.2",
     "lint-staged": "^7.2.0",
     "prettier": "^0.11.0",
     "prop-types": "15.6.2",
@@ -38,7 +41,9 @@
     "react-motion": "^0.5.2",
     "react-styleguidist": "7.1.0",
     "stylelint": "^9.4.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-standard": "^18.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -49,7 +54,6 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "compression-webpack-plugin": "^1.1.11",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-prettier": "2.9.0",
@@ -57,7 +61,6 @@
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.10.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "husky": "^1.0.0-rc.13",
     "node-sass": "^4.5.3",
@@ -65,8 +68,8 @@
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "svg-sprite-loader": "3.9.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0"
   }
 }
