--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "classnames": "^2.2.6",
     "compression-webpack-plugin": "^1.1.11",
     "eslint-plugin-prettier": "2.6.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "1.2.0",
     "glob": "^7.1.2",
     "lint-staged": "^7.2.0",
