--- a/package.json
+++ b/package.json
@@ -25,23 +25,13 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "compression-webpack-plugin": "^1.1.11",
-    "eslint-plugin-prettier": "2.6.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "1.2.0",
-    "glob": "^7.1.2",
-    "lint-staged": "^7.2.0",
-    "prettier": "^0.11.0",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-collapse": "^4.0.3",
     "react-dom": "16.4.1",
     "react-motion": "^0.5.2",
-    "react-styleguidist": "7.1.0",
-    "stylelint": "^9.4.0",
-    "stylelint-config-standard": "^18.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.3"
+    "react-styleguidist": "7.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -52,22 +42,33 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "compression-webpack-plugin": "^1.1.11",
+    "directory-named-webpack-plugin": "^4.0.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-vizzuality": "^1.1.7",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-react": "7.10.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "glob": "^7.1.2",
     "husky": "^1.0.0-rc.13",
+    "lint-staged": "^7.2.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "prettier": "^0.11.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-standard": "^18.2.0",
     "svg-sprite-loader": "3.9.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
+    "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   }
 }
