--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-vizzuality": "^1.1.7",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "2.6.2",
