--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gh-pages": "1.2.0",
+    "lodash": "^4.17.10",
     "prop-types": "15.6.2",
     "react": "16.4.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-addons-transition-group": "^15.6.2",
     "react-collapse": "^4.0.3",
     "react-dom": "16.4.1",
+    "react-dom-factories": "^1.0.0",
     "react-motion": "^0.5.2",
-    "react-styleguidist": "7.1.0"
+    "react-selectize": "^3.0.1",
+    "react-styleguidist": "7.1.0",
+    "react-transition-group": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
