--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,7 @@
   "extends": "stylelint-config-standard",
   "rules": {
     "block-no-empty": null,
+    "at-rule-no-unknown": null,
     "selector-pseudo-class-no-unknown": [
       true, { ignorePseudoClasses: ["global"] }
     ]
