--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn compile && git add . && git commit --amend --no-edit --no-verify"
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
