--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,4 @@
 {
   "presets": ["env", "react", "stage-0"],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": [".", "./src"],
-        "alias": {
-          "components": "./src/components",
-          "styles": "./styles"
-        },
-        "cwd": "babelrc"
-      }
-    ]
-  ]
+  "plugins": []
 }
