--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-motion": "^0.5.2",
     "react-selectize": "^3.0.1",
     "react-styleguidist": "7.1.0",
+    "react-tooltip": "^3.6.1",
     "react-transition-group": "^1.1.2"
   },
   "devDependencies": {
