--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-responsive": "^5.0.0",
     "react-selectize": "^3.0.1",
     "react-styleguidist": "7.1.0",
+    "react-tooltip": "^3.6.1",
     "react-transition-group": "^1.1.2",
     "react-virtualized": "^9.20.1"
   },
