--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-collapse": "^4.0.3",
     "react-dom": "16.4.1",
     "react-dom-factories": "^1.0.0",
+    "react-modal": "^3.5.1",
     "react-motion": "^0.5.2",
     "react-responsive": "^5.0.0",
     "react-selectize": "^3.0.1",
