--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,8 @@ rules:
   react/jsx-one-expression-per-line: 'warn'
   react/sort-comp: 0
   import/prefer-default-export: 0
+  class-methods-use-this: 1
+  react/destructuring-assignment: 1
 
 settings:
   import/resolver: webpack
