--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
     }
   },
   "dependencies": {
-    "classnames": "2.2.6",
-    "gh-pages": "1.2.0",
-    "lodash": "4.17.10",
-    "prop-types": "15.6.2",
-    "react": "16.4.1",
     "react-addons-css-transition-group": "15.6.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-addons-transition-group": "15.6.2",
     "react-collapse": "4.0.3",
-    "react-dom": "16.4.1",
     "react-dom-factories": "1.0.0",
     "react-modal": "3.5.1",
     "react-motion": "0.5.2",
     "react-responsive": "5.0.0",
     "react-selectize": "3.0.1",
-    "react-styleguidist": "7.1.0",
     "react-tooltip": "3.6.1",
     "react-transition-group": "1.1.2",
     "react-virtualized": "9.20.1"
+  },
+  "peerDependencies": {
+    "classnames": "2.2.6",
+    "lodash": "4.17.10",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1"
   },
   "devDependencies": {
     "babel-core": "6.25.0",
@@ -52,6 +52,7 @@
     "babel-preset-latest": "6.22.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "classnames": "2.2.6",
     "compression-webpack-plugin": "1.1.11",
     "directory-named-webpack-plugin": "4.0.0",
     "eslint": "4.19.1",
@@ -65,12 +66,18 @@
     "eslint-plugin-react": "7.10.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
+    "gh-pages": "1.2.0",
     "glob": "7.1.2",
     "husky": "1.0.0-rc.13",
     "lint-staged": "7.2.0",
+    "lodash": "4.17.10",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.6",
     "prettier": "0.11.0",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-styleguidist": "7.1.0",
     "resolve-url-loader": "2.3.0",
     "sass-loader": "7.0.3",
     "style-loader": "0.21.0",
@@ -80,6 +87,7 @@
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
     "webpack": "4.16.3",
+    "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.1.0"
   }
 }
