--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-eslint": "8.2.6",
     "babel-loader": "7.1.1",
     "babel-plugin-module-resolver": "3.1.1",
+    "babel-plugin-recharts": "1.1.1",
     "babel-preset-env": "1.6.0",
     "babel-preset-latest": "6.22.0",
     "babel-preset-react": "6.24.1",
