--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "16.4.1",
     "react-styleguidist": "7.1.0",
     "resolve-url-loader": "2.3.0",
+    "release": "github:vizzuality/release#4.0.0",
     "sass-loader": "7.0.3",
     "style-loader": "0.21.0",
     "stylelint": "9.4.0",
