--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "d3-format": "1.3.0",
+    "d3-hierarchy": "^1.1.8",
     "react-addons-shallow-compare": "15.6.0",
     "react-addons-transition-group": "15.6.2",
     "react-collapse": "4.0.3",
@@ -82,8 +83,8 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-styleguidist": "7.1.0",
-    "resolve-url-loader": "2.3.0",
     "release": "github:vizzuality/release#4.0.0",
+    "resolve-url-loader": "2.3.0",
     "sass-loader": "7.0.3",
     "style-loader": "0.21.0",
     "stylelint": "9.4.0",
