--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "d3-format": "1.3.0",
     "d3-hierarchy": "^1.1.8",
+    "downshift": "^3.1.4",
     "react-addons-shallow-compare": "15.6.0",
     "react-addons-transition-group": "15.6.2",
     "react-collapse": "4.0.3",
@@ -75,7 +76,7 @@
     "glob": "7.1.2",
     "husky": "1.0.0-rc.13",
     "lint-staged": "7.2.0",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.10",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.6",
     "prettier": "0.11.0",
