--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-motion": "0.5.2",
     "react-responsive": "5.0.0",
     "react-selectize": "3.0.1",
+    "react-slick": "^0.23.2",
     "react-tooltip": "3.6.1",
     "react-transition-group": "1.1.2",
     "react-virtualized": "9.20.1",
