--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-responsive": "5.0.0",
     "react-selectize": "3.0.1",
     "react-slick": "^0.23.2",
+    "react-simple-maps": "^0.12.1",
     "react-tooltip": "3.6.1",
     "react-transition-group": "1.1.2",
     "react-virtualized": "9.20.1",
