Add map component to styleguidist

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-virtualized": "9.20.1",
     "recharts": "1.1.0",
     "recharts-scale": "0.3.2",
-    "reselect": "3.0.1"
+    "reselect": "3.0.1",
+    "topojson-client": "^3.0.0"
   },
   "peerDependencies": {
     "classnames": "2.2.6",
