--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-styleguidist": "7.1.0",
+    "react-truncate": "2.4.0",
     "release": "github:vizzuality/release#4.0.0",
     "resolve-url-loader": "2.3.0",
     "sass-loader": "7.0.3",
