Small refactor changes

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,7 +7,7 @@
     "no-duplicate-selectors": null,
     "length-zero-no-unit": null,
     "selector-pseudo-class-no-unknown": [
-      true, { ignorePseudoClasses: ["global"] }
+      true, { ignorePseudoClasses: ["global", "export"] }
     ]
   }
 }
