--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "react-addons-transition-group": "15.6.2",
     "react-collapse": "4.0.3",
     "react-dom-factories": "1.0.0",
+    "react-markdown": "^4.0.4",
     "react-modal": "3.5.1",
     "react-motion": "0.5.2",
     "react-responsive": "5.0.0",
     "react-selectize": "3.0.1",
-    "react-slick": "^0.23.2",
     "react-simple-maps": "^0.12.1",
+    "react-slick": "^0.23.2",
     "react-tooltip": "3.6.1",
     "react-transition-group": "1.1.2",
     "react-truncate": "2.4.0",
