--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   },
   "dependencies": {
+    "@latticejs/recharts-sunburst": "^1.0.1-beta.0",
     "d3-format": "1.3.0",
     "d3-hierarchy": "^1.1.8",
     "react-addons-shallow-compare": "15.6.0",
