--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@latticejs/recharts-sunburst": "^1.0.1-beta.0",
     "d3-format": "1.3.0",
     "d3-hierarchy": "^1.1.8",
+    "downshift": "^3.2.1",
     "react-addons-shallow-compare": "15.6.0",
     "react-addons-transition-group": "15.6.2",
     "react-collapse": "4.0.3",
