--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "styleguidist server",
     "build": "styleguidist build",
     "compile": "webpack",
+    "dev": "webpack --config webpack-dev.config.js --watch",
     "deploy": "yarn run build && gh-pages -d styleguide"
   },
   "lint-staged": {
