--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     }
   },
   "dependencies": {
+    "@d3fc/d3fc-discontinuous-scale": "^3.0.7",
     "@latticejs/recharts-sunburst": "^1.0.1-beta.0",
     "d3-format": "1.3.0",
     "d3-hierarchy": "^1.1.8",
